# HolyRead

./: .gitignore  README.md  index.html  serve.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json  railway.toml  run.py
backend/app/: config.py  limiter.py  main.py  osis_codes.py
backend/app/routes/: analytics.py  bible.py  original.py
backend/app/services/: data_loader.py
backend/data/glosses/: grc.json
backend/data/glosses/en/: he.json
backend/data/glosses/es/: grc.json  he.json
backend/data/glosses/fr/: grc.json  he.json
backend/data/glosses/pt/: grc.json  he.json
backend/data/greek/: 39.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  50.json  51.json  52.json  53.json  54.json  55.json  56.json  57.json  58.json  59.json  60.json  61.json  62.json  63.json  64.json  65.json
backend/data/hebrew/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json
backend/scripts/: import_glosses.py  import_greek.py  import_hebrew.py  translate_glosses.py  translit_grc.py  translit_he.py
frontend/: config.js  index.html
frontend/assets/: api.js
scripts/: dev.sh
